[package]
name = "pomelo"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pomelo"
path = "src/bin/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
filenamify = "0.1.1"
futures = "0.3.30"
iced = {git = "https://github.com/iced-rs/iced.git", features = ["advanced", "tokio", "image"]}
iced_video_player = {git = "https://github.com/sudfud/iced_video_player.git"}
invidious = {version = "0.7.4", features = ["reqwest_async"]}
log = "0.4.22"
rand = "0.8.5"
reqwest = {version = "0.12.5", features = ["blocking"]}
rfd = "0.14.1"
rusty_ytdl = { version = "0.7.3", features = ["blocking"] }
serde = "1.0.204"
serde_json = "1.0.120"
serde_url_params = "0.2.1"
simple-logging = "2.0.2"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
urlencoding = "2.1.3"
youtube_dl = {version = "0.10.0", features = ["downloader-native-tls", "tokio"]}
